--- a/index.ipynb
+++ b/index.ipynb
@@ -168,7 +168,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\".title()# 'Art Vandelay'"
    ]
   },
   {
@@ -186,7 +186,7 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'"
+    "\"Ceo\".upper() # 'CEO'"
    ]
   },
   {
@@ -223,7 +223,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "'www.'+'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
