--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,8 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False"
+    "bool(\"art.vandelay@vandelay.co\")\n",
+    "# False"
    ]
   },
   {
