Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -243,23 +243,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'art.vandelay@vandelay.co'"
+       "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bool(\"art.vandelay@vandelay.co\")\n",
-    "# False"
+    "bool(\"art.vandelay@vandelay.co\")# False"
    ]
   },
   {
